# furby

./: .gitignore  Makefile  README.md  ai.py  button.py  calibrate_expressions.py  environment.yml  expressions.py  furby.py  furbyslow.py  hue.py  main.py  memory.py  music.py  notes.md  notes.txt  plan.md  pyproject.toml  requirements.txt  server.py  setup_pi.sh  stopfurby.py  summarize.py  tts.md  voice.py
config/: expressions.yaml
